# dotfiles

./: .coderabbit.yml  .gitignore  AGENTS.md  Brewfile  LICENSE  README.md  justfile  pyproject.toml  semgrep.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
agents/.agents/skills/academic-authorship-boundary/: SKILL.md
agents/.agents/skills/cargo-rdme-adoption/: SKILL.md
agents/.agents/skills/changelog-commit-message/: SKILL.md
agents/.agents/skills/codecov-test-gaps/: SKILL.md
agents/.agents/skills/course-study-workflow/: SKILL.md
agents/.agents/skills/cpp-api-design/: SKILL.md
agents/.agents/skills/cpp-api-docs/: SKILL.md
agents/.agents/skills/cpp-build-portability/: SKILL.md
agents/.agents/skills/cpp-concurrency-reentrancy/: SKILL.md
agents/.agents/skills/cpp-exception-safety-error-contracts/: SKILL.md
agents/.agents/skills/cpp-functional-style/: SKILL.md
agents/.agents/skills/cpp-invariant-state-transitions/: SKILL.md
agents/.agents/skills/cpp-lifetime-ownership-safety/: SKILL.md
agents/.agents/skills/cpp-parse-dont-validate/: SKILL.md
agents/.agents/skills/cpp-production-review/: SKILL.md
agents/.agents/skills/cpp-review-orchestrator/: SKILL.md
agents/.agents/skills/cpp-scientific-correctness/: SKILL.md
agents/.agents/skills/cpp-test-quality/: SKILL.md
agents/.agents/skills/crate-docs-update/: SKILL.md
agents/.agents/skills/docs-review-orchestrator/: SKILL.md
agents/.agents/skills/github-issue-planning/: SKILL.md
agents/.agents/skills/jupyter-notebook-review/: SKILL.md
agents/.agents/skills/project-tooling-review/: SKILL.md
agents/.agents/skills/python-build-portability/: SKILL.md
agents/.agents/skills/python-cli-review/: SKILL.md
agents/.agents/skills/python-parse-dont-validate/: SKILL.md
agents/.agents/skills/python-production-review/: SKILL.md
agents/.agents/skills/python-review-orchestrator/: SKILL.md
agents/.agents/skills/python-scientific-review/: SKILL.md
agents/.agents/skills/python-support-scripts/: SKILL.md
agents/.agents/skills/python-test-quality/: SKILL.md
agents/.agents/skills/repo-review/: SKILL.md
agents/.agents/skills/repository-docs-review/: SKILL.md
agents/.agents/skills/rust-api-docs/: SKILL.md
codex/.codex/: config.toml
codex/.codex/rules/: notebooks.rules
git/: .gitconfig
home/: *  .bash_profile  .brew  .gitconfig
scripts/: semgrep_fixture_config.py  skill_validate.py  stow_verify.py  test_semgrep_fixture_config.py  test_skill_validate.py  test_stow_verify.py
tests/semgrep/: Brewfile
tests/semgrep/docs/: command_order.sh
zsh/: .zshrc
(+127 files in other folders)
